--- a/src/copy/index.html
+++ b/src/copy/index.html
@@ -15,7 +15,7 @@
 	<script src="js/all.js"></script>
   <script>
     function initialize() {
-      var viz = new Viz({width: 960, height: 720})
+      var viz = new Viz()
     }
     initialize()
   </script>
